configured the front end